crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__string__literals.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/literals.lox
---
success: true
exit_code: 0
----- stdout -----
()
a string
A~¶Þॐஃ

----- stderr -----
