crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__string__multiline.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/multiline.lox
---
success: true
exit_code: 0
----- stdout -----
1
2
3

----- stderr -----
