crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__string__unterminated.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/unterminated.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: unterminated string literal
   ╭─[craftinginterpreters/test/string/unterminated.lox:2:1]
   │
 2 │ "this string has no close quote
   │ ───────────────────────────────  
───╯
